add_subdirectory(Utility)
add_subdirectory(Reproducibility)

# Main models

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_3D MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_3D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_3D MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_3D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_3D MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_3D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_Arrhenius_3D MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_Arrhenius_3D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_Arrhenius_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_Arrhenius_3D MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_Arrhenius_3D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_Arrhenius_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_Arrhenius_3D MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_Arrhenius_3D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_Arrhenius_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

if ( HYTEG_BUILD_WITH_PETSC )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_3D_PETSc MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_3D_PETSc MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_3D_PETSc MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_Arrhenius_3D_PETSc MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_Arrhenius_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_Arrhenius_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_Arrhenius_3D_PETSc MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_Arrhenius_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_Arrhenius_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_Arrhenius_3D_PETSc MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_Arrhenius_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_Arrhenius_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

endif()


# Rest of the models that serve as building blocks and are not compiled during CI to avoid
# large build times. Since HYTEG_DONT_BUILD_DURING_CI is ON by default, the build targets
# exists during normal usage unless you manually change HYTEG_DONT_BUILD_DURING_CI to OFF.

if ( HYTEG_DONT_BUILD_DURING_CI )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_3D MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_3D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_3D MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_3D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_3D MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_3D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_3D MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_3D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_3D MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_3D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_3D MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_3D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_3D MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_3D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_3D MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_3D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_3D MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_3D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_3D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_2D MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_2D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_2D MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_2D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_2D MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_2D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_2D MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_2D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_2D MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_2D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_2D MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_2D.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_2D MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_2D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_2D MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_2D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_2D MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_2D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_2D MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_2D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_2D MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_2D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_2D MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_2D.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_2D hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

if ( HYTEG_BUILD_WITH_PETSC )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_3D_PETSc MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_3D_PETSc MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_3D_PETSc MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_3D_PETSc MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_3D_PETSc MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_3D_PETSc MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_3D_PETSc MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_3D_PETSc MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_3D_PETSc MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_3D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_3D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_2D_PETSc MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_ScaledMass_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_2D_PETSc MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_VCycleBFBT_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_2D_PETSc MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_MMOC_FGMRES_WBFBT_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_2D_PETSc MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_ScaledMass_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_2D_PETSc MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_VCycleBFBT_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_2D_PETSc MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_AsymmetricSystem_SUPG_FGMRES_WBFBT_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_2D_PETSc MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_ScaledMass_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_2D_PETSc MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_VCycleBFBT_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_2D_PETSc MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_MMOC_FGMRES_WBFBT_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_2D_PETSc MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_ScaledMass_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_2D_PETSc MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_VCycleBFBT_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

add_executable       ( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_2D_PETSc MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_2D_PETSc.cpp )
target_link_libraries( MCMAIN_TALA_FrozenVelocity_SUPG_FGMRES_WBFBT_2D_PETSc hyteg walberla::core Boost::headers convection_particles MC-operators elementwise_dof_value_operator )

endif()

endif()

waLBerla_link_files_to_builddir( *.prm )

if(NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/vtk)
    file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/vtk")
endif()